add more features

--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html>
   <head>
     <title>Excursion</title>
-    <link href="./resources/style.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <h2>Download Excursion (Comong soon!)</h2>
-     </body>
+    <video src="./resources/videos/excursion.mp4" autoplay loop>
+    </video>
+    <h3>Your personal travel guide</h3>
+    <h4>Excursion rembers places you like, and recommends new points of interest
+      around you.</h4>
+    <img src="./resources/images/camp.jpg"/>
+    <br />
+    <br />
+    <br />
+    <img src="./resources/images/phone.png"/>
+    <h3>Coming Soon for iPhone and Android<h3>
+    <h2>Download Excursion (Coming soon!)</h2>
+    <h5>
+  </body>
 </html>
